# char_trie

./: .gitignore  Cargo.toml  README.md
examples/: all_seg.rs  example.rs  front_max.rs
src/: lib.rs  tokenizer.rs
