[package]
name = "char_trie"
version = "0.1.0"
edition = "2021"
authors = ["Ansj <ansj-sun@163.com>"]
license = "MIT OR Apache-2.0"
categories = ["trie", "trietree", "char_trie", "char_trietree", "trie_tree"]
description = "Text segmentation based on trie tree, High performance, support for custom dictionary"


[[example]]
name = "all_seg"
